--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
   "module": "src/index.ts",
   "scripts": {
     "pretty": "yarn prettier '**/*.*'",
-    "lint": "yarn pretty --check && yarn eslint .",
-    "format": "yarn build && yarn pretty --write && yarn eslint --fix .",
+    "lint": "yarn build && yarn link-plugin && yarn pretty --check && yarn eslint .",
+    "format": "yarn build && yarn link-plugin && yarn pretty --write && yarn eslint --fix .",
     "build": "tsc",
-    "test": "yarn build && jest"
+    "test": "yarn build && jest",
+    "link-plugin": "yarn link && yarn link eslint-plugin-jest-formatting"
   },
   "peerDependencies": {
     "eslint": "5.x"
