--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "devDependencies": {
     "@types/eslint": "4.16.6",
+    "@types/estree": "0.0.39",
     "@types/jest": "24.0.11",
     "@types/node": "8.10.0",
     "@typescript-eslint/parser": "1.10.2",
