Update peer dependency

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "link-plugin": "yarn link && yarn link eslint-plugin-jest-formatting"
   },
   "peerDependencies": {
-    "eslint": "5.x"
+    "eslint": ">=0.8.0"
   },
   "devDependencies": {
     "@types/eslint": "4.16.6",
